# keymap

./: .gitignore  Folge.cabal  README.md  keymap.cabal  stack.yaml
app/: Main.hs  Parser.hs  Types.hs
assets/: agda-input.el  agda-input.old  alpha-numeric.ext  extracted.el  latin-ltx.el
output/: keymap.json  query.json
src/: Explorer.hs  Generator.hs  Main.hs  Parser.hs  Types.hs
