name:                keymap
version:             0.1.0.0
synopsis:            Keymap generator for agda-mode
description:         Please see README.md
homepage:            https://github.com/banacorn/keymap#readme
license:             MIT
license-file:        LICENSE
author:              LUĀ Tîng-Giān
maintainer:          banacorn@gmail.com
copyright:           2017 LUĀ Tîng-Giān
category:            Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable generate
    hs-source-dirs:     src
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base,
                        text,
                        bytestring,
                        attoparsec,
                        containers,
                        unordered-containers,
                        aeson
    default-language:   Haskell2010

source-repository head
    type:     git
    location: https://github.com/banacorn/keymap#readme
